Closed Bug 1273072 Opened 9 years ago Closed 9 years ago

[Static Analysis][Uninitialized pointer field] In constructor WebIDLNameTableEntry(KeyTypePointer aKey)

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox49 --- fixed

People

(Reporter: andi, Assigned: andi)

References

(Blocks 1 open bug)

Details

(Keywords: coverity, Whiteboard: CID 1361803 btpp-active)

Attachments

(1 file)

The Static Analysis tool Coverity added that variables |mNameOffset|, |mNameLength|, |mDefine|, |mEnabled|. As we are trying to push for a more RAII architecture and we want to prepare our code for this clang-plugin - 525063. We should initialize these variables.
Whiteboard: CID 1361803 → CID 1361803 btpp-active
Comment on attachment 8752720 [details] MozReview Request: Bug 1273072 - initialize |mNameOffset|, |mNameLength|, |mDefine|, |mEnabled|. r?jst Redirecting review to peterv who understands the tradeoffs here better than I do.
Attachment #8752720 - Flags: review?(jst) → review?(peterv)
Attachment #8752720 - Flags: review?(peterv) → review+
Comment on attachment 8752720 [details] MozReview Request: Bug 1273072 - initialize |mNameOffset|, |mNameLength|, |mDefine|, |mEnabled|. r?jst https://reviewboard.mozilla.org/r/52750/#review50726 Hmm, this is a rather useless initialization since the fields will be overwritten right away.
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: