Bug 1273072 - initialize |mNameOffset|, |mNameLength|, |mDefine|, |mEnabled|. r=peterv

MozReview-Commit-ID: 49fNxcG2C1

--HG--
extra : rebase_source : b30973f381bbc627fc133849b76783b4eddffa7e